# agent-bench-lab

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml
.githooks/: pre-commit
benchmark/tasks/: simple_content_warning.json
docker/: compose.benchmark.yaml
docs/: simple_content_warning_forensic_report.en.md
docs/superpowers/specs/: 2026-04-21-mediacms-benchmark-plan.md  2026-04-21-project-scaffold-design.md
native/yulya-zig/: build.zig
native/yulya-zig/src/: browser_tool.zig  command_tools.zig  main.zig  openrouter_client.zig  planner.zig  policy.zig  repo_tools.zig  state.zig  validator.zig
native/yulya-zig/src/assets/: simple_content_warning.patch
native/yulya-zig/src/assets/template/files/: admin.py  forms.py  serializers.py
scripts/: audit_public_repo.py  check_staged_secrets.py
src/benchmark_lab/: __init__.py  __main__.py  browser_check.py  browser_scenarios.py  cohort.py  docker_env.py  models.py  reporting.py  runner.py  scoring.py  single_run.py  tasks.py  workspace.py
src/benchmark_lab/adapters/: __init__.py  aider.py  base.py  cline.py  hermes.py  kilocode.py  missing.py  openclaw.py  opencode.py  openhands.py  pi.py  qwen_code.py  yulya_zig.py
tests/: test_adapter_registry.py  test_browser_check.py  test_docker_baseline.py  test_models.py  test_pi_adapter.py  test_qwen_adapter.py  test_reporting.py  test_runner.py  test_scoring.py  test_single_run.py  test_task_manifest.py  test_workspace_snapshot.py  test_yulya_zig_adapter.py
(+3 files in other folders)
