[project]
name = "coding-agents-comparison"
version = "0.1.0"
description = "Project for comparing different coding agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
